# master_thesis

./: README.md  augment_control_inputs.py  check_close_obstacles.py  collision_avoidance_stl_specs.py  collision_handler.py  compute_additional_points.py  compute_robustness.py  compute_trajectories.py  generate_valid_positions.py  goal_distance_predicates.py  goal_distance_stl_specs.py  high_level_planner.py  mpc_high_level2.py  obstacle_avoidance_stl_specs.py  product_dynamical_system.py  pyproject.toml  requirements.txt  simulation_results.txt  stl.py
results/: result_analysis.txt  simulation_results.txt
simulations/: high_level_planner.py  sim1.py  sim2.py  sim3.py  sim4.py  sim_continuous_time.py  stl.py
stl_games/: augment_trajectory_points.py  collision_detection.py  collision_handler.py  compute_additional_points.py  compute_trajectories.py  compute_x0.py  generate_valid_positions.py  obstacle_avoidance_stl_specs.py  plot_result.py
stl_games/collision/: collision_handler.py  detect_collision.py
stl_games/environment/: compute_x0.py  generate_obstacles.py  generate_valid_positions.py
stl_games/linear_system/: continuous_time_dynamics.py  product_dynamical_system.py
stl_games/mpc/: mpc_cbf_linearized_multipleGoals.py  mpc_collision_avoidance.py  mpc_high_level.py  mpc_high_level2.py  mpc_player1.py  mpc_player2.py
stl_games/plot/: plot_result.py
stl_games/stl/: compute_robustness.py  stl_specs.py
stl_games/trajectory/: trajectory_handler.py
utils/: util_functions.py
