[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "stl-games"
version = "0.0"
authors = [
  {name = "Enrico Dozzi", email = "enricod@kth.se"},
]
readme = "README.md"
dependencies = [
  "cvxpy",
  "matplotlib",
  "numpy",
  "stlpy",
  "gurobipy"
]
[tool.setuptools]
packages = ["stl_games"]